// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateFormComponent > generates correct SFC for content type 1`] = `
"<!-- AUTO-GENERATED — do not edit. Re-run \`manguito build\` to regenerate. -->
<script setup lang="ts">
import EnumSelect from '@bobbykim/manguito-cms-admin/src/components/fields/EnumSelect.vue'
import MediaUpload from '@bobbykim/manguito-cms-admin/src/components/fields/MediaUpload.vue'
import ParagraphEmbed from '@bobbykim/manguito-cms-admin/src/components/fields/ParagraphEmbed.vue'
import RichTextEditor from '@bobbykim/manguito-cms-admin/src/components/fields/RichTextEditor.vue'
import TextInput from '@bobbykim/manguito-cms-admin/src/components/fields/TextInput.vue'
import PullQuoteForm from './paragraph--pull_quote.vue'
import { useFormValidation } from '@bobbykim/manguito-cms-admin/src/composables/useFormValidation'

const props = defineProps<{
  modelValue: Record<string, unknown>
  disabled?: boolean
}>()

const emit = defineEmits<{
  'update:modelValue': [value: Record<string, unknown>]
}>()

const { errors } = useFormValidation()

function update(field: string, value: unknown) {
  emit('update:modelValue', { ...props.modelValue, [field]: value })
}
</script>

<template>
  <Tabs>
    <Tab name="content" label="Content">
      <TextInput
        :field="{ name: 'title', label: 'Title', field_type: 'text/plain', required: true }"
        :modelValue="modelValue.title"
        :error="errors.title"
        :disabled="disabled"
        @update:modelValue="update('title', $event)"
      />
      <RichTextEditor
        :field="{ name: 'body', label: 'Body', field_type: 'text/rich', required: false }"
        :modelValue="modelValue.body"
        :error="errors.body"
        :disabled="disabled"
        @update:modelValue="update('body', $event)"
      />
      <EnumSelect
        :field="{ name: 'status', label: 'Status', field_type: 'enum', required: false, validation: { required: false, allowed_values: ['draft', 'published'] } }"
        :modelValue="modelValue.status"
        :error="errors.status"
        :disabled="disabled"
        @update:modelValue="update('status', $event)"
      />
      <ParagraphEmbed
        :field="{ name: 'cards', label: 'Cards', field_type: 'paragraph', required: false }"
        :formComponent="PullQuoteForm"
        :modelValue="modelValue.cards"
        :error="errors.cards"
        :disabled="disabled"
        @update:modelValue="update('cards', $event)"
      />
    </Tab>
    <Tab name="media" label="Media">
      <MediaUpload
        :field="{ name: 'cover', label: 'Cover', field_type: 'image', required: false, validation: { required: false, allowed_mime_types: ['image/jpeg', 'image/png', 'image/webp', 'image/gif', 'image/svg+xml'] }, ui_component: { component: 'file-upload', accepted_mime_types: ['image/jpeg', 'image/png', 'image/webp', 'image/gif', 'image/svg+xml'] } }"
        :modelValue="modelValue.cover"
        :error="errors.cover"
        :disabled="disabled"
        @update:modelValue="update('cover', $event)"
      />
    </Tab>
  </Tabs>
</template>"
`;

exports[`generateFormComponent > generates correct SFC for paragraph type 1`] = `
"<!-- AUTO-GENERATED — do not edit. Re-run \`manguito build\` to regenerate. -->
<script setup lang="ts">
import TextInput from '@bobbykim/manguito-cms-admin/src/components/fields/TextInput.vue'
import { useFormValidation } from '@bobbykim/manguito-cms-admin/src/composables/useFormValidation'

const props = defineProps<{
  modelValue: Record<string, unknown>
  disabled?: boolean
}>()

const emit = defineEmits<{
  'update:modelValue': [value: Record<string, unknown>]
}>()

const { errors } = useFormValidation()

function update(field: string, value: unknown) {
  emit('update:modelValue', { ...props.modelValue, [field]: value })
}
</script>

<template>
  <TextInput
    :field="{ name: 'quote', label: 'Quote', field_type: 'text/plain', required: true }"
    :modelValue="modelValue.quote"
    :error="errors.quote"
    :disabled="disabled"
    @update:modelValue="update('quote', $event)"
  />
  <TextInput
    :field="{ name: 'attribution', label: 'Attribution', field_type: 'text/plain', required: false }"
    :modelValue="modelValue.attribution"
    :error="errors.attribution"
    :disabled="disabled"
    @update:modelValue="update('attribution', $event)"
  />
</template>"
`;

exports[`generateFormComponent > generates correct SFC for taxonomy type 1`] = `
"<!-- AUTO-GENERATED — do not edit. Re-run \`manguito build\` to regenerate. -->
<script setup lang="ts">
import TextInput from '@bobbykim/manguito-cms-admin/src/components/fields/TextInput.vue'
import { useFormValidation } from '@bobbykim/manguito-cms-admin/src/composables/useFormValidation'

const props = defineProps<{
  modelValue: Record<string, unknown>
  disabled?: boolean
}>()

const emit = defineEmits<{
  'update:modelValue': [value: Record<string, unknown>]
}>()

const { errors } = useFormValidation()

function update(field: string, value: unknown) {
  emit('update:modelValue', { ...props.modelValue, [field]: value })
}
</script>

<template>
  <TextInput
    :field="{ name: 'label', label: 'Label', field_type: 'text/plain', required: true }"
    :modelValue="modelValue.label"
    :error="errors.label"
    :disabled="disabled"
    @update:modelValue="update('label', $event)"
  />
</template>"
`;
